--- a/pluginlib/CMakeLists.txt
+++ b/pluginlib/CMakeLists.txt
@@ -80,7 +80,7 @@ if(BUILD_TESTING)
     )
     target_compile_definitions(${PROJECT_NAME}_unique_ptr_test PUBLIC "PLUGINLIB__DISABLE_BOOST_FUNCTIONS")
 
-    if(CMAKE_COMPILER_IS_GNUCXX)
+    if(CMAKE_COMPILER_IS_GNUCXX OR (${CMAKE_SYSTEM_NAME} MATCHES "Linux" AND ${CMAKE_CXX_COMPILER_ID} MATCHES "Clang"))
       target_link_libraries(${PROJECT_NAME}_unique_ptr_test stdc++fs)
     endif()
     add_dependencies(${PROJECT_NAME}_unique_ptr_test test_plugins)
@@ -101,7 +101,7 @@ if(BUILD_TESTING)
     )
     target_compile_definitions(${PROJECT_NAME}_utest PUBLIC "PLUGINLIB__DISABLE_BOOST_FUNCTIONS")
 
-    if(CMAKE_COMPILER_IS_GNUCXX)
+    if(CMAKE_COMPILER_IS_GNUCXX OR (${CMAKE_SYSTEM_NAME} MATCHES "Linux" AND ${CMAKE_CXX_COMPILER_ID} MATCHES "Clang"))
       target_link_libraries(${PROJECT_NAME}_utest stdc++fs)
     endif()
     add_dependencies(${PROJECT_NAME}_utest test_plugins)
