--- a/pluginlib/package.xml
+++ b/pluginlib/package.xml
@@ -21,12 +21,14 @@
   <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>
 
   <build_depend>cmake_modules</build_depend>
+  <build_depend>libboost-dev</build_depend>
   <build_depend>libboost-filesystem-dev</build_depend>
   <build_depend>class_loader</build_depend>
   <build_depend>rosconsole</build_depend>
   <build_depend version_gte="1.11.1">roslib</build_depend>
   <build_depend>tinyxml2</build_depend>
 
+  <build_export_depend>libboost-dev</build_export_depend>
   <build_export_depend>libboost-filesystem-dev</build_export_depend>
   <build_export_depend>class_loader</build_export_depend>
   <build_export_depend>rosconsole</build_export_depend>
